# chess

./: .gitignore  README.md  board.py  config.py  define.py  download_chess_record.py  game.py  main.py  mcts.py  net.py  pyproject.toml  replay_chess_record.py  selfplay.py  tarin.py  test.py  test_pychess.py  test_slider.py  train.py  train_collect.py  train_policy.py  utils.py
.github/: copilot-instructions.md
bz_chess/: board.py  define.py  game.py  utils.py
bz_chess/rs_chinese_chess/: chess_engine.pyd
chess/: __init__.py  board.py  define.py  game.py  utils.py
chess_engine_rs/: Cargo.toml
net/: policy_net.py  res_block.py  value_net.py
players/: base_player.py  mstc_player.py  pikafish.py  pikafish_player.py  policy_player.py
players/uci_client/: __init__.py  client.py  command.py  protocol.py
rs_chinese_chess/: __init__.py
scripts/: _common.py  collect_and_train.py  collect_selfplay_data.py  display.py  download_chess_record.py  selfplay_train.py  test.py  train_policy.py  train_value.py
utils/: __init__.py  common.py  display.py  mcts.py  mcts_go.py  self_play.py  show_in_slider.py  sqlite.py  utils.py
utils/db/: __init__.py  common.py  dp_chess_record.py  loader.py  selfplay_chess_record.py  sqlite_to_csv.py
