[project]
name = "bz-chess"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "httpx>=0.28.1",
    "ipykernel>=6.30.0",
    "ipywidgets>=8.1.7",
    "lightning>=2.5.2",
    "matplotlib>=3.10.5",
    "termcolor>=3.1.0",
    "torch>=2.7.1",
]
