[project]
name = "bz-chess"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "httpx>=0.28.1",
    "ipykernel>=6.30.0",
    "ipywidgets>=8.1.7",
    "lightning>=2.5.2",
    "matplotlib>=3.10.5",
    "termcolor>=3.1.0",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
]

[tool.uv.sources]
# https://docs.astral.sh/uv/guides/integration/pytorch/
torch = [
    { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
